[package]
name = "redis-tools"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
redis = "0.27"
log = "0.4"
log4rs = { version = "1.3", features = [
	"rolling_file_appender",
	"compound_policy",
	"size_trigger",
	"time_trigger",
	"fixed_window_roller",
] }
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
bincode = "1.3"
serde_cbor = "0.11"
anyhow = { version = "1.0", features = ["backtrace"] }
